--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 html, body {
-  background: linear-gradient(#e0e7ff, #faf6f4);
+  background: linear-gradient(#e2e8fd, #fbf5f2);
   background-attachment: fixed;
   margin: 0px;
   height: 100%;
@@ -148,6 +148,21 @@ html, body {
     margin: 80px 0 0 85px;
     font-family: Recoleta;
     font-weight: 700;
+  }
+  .hobbies {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 30px;
+    padding-bottom: 50px;
+  }
+  .hobby {
+    text-align: center;
+    width: 25%;
+  }
+  .hobby-img {
+    border-radius: 20px;
+    width: 70%;
   }
 
 
